--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/bootstrap": "^5.0.12",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
@@ -15,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
