--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"@types/bootstrap": "^5.0.12",
+		"@types/leaflet": "^1.7.0",
 		"@types/node": "^14.14.37",
 		"@types/react": "^17.0.3",
 		"@types/react-router-dom": "^5.1.7",
@@ -21,6 +22,7 @@
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
+		"react-leaflet": "^3.1.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.4",
