--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"axios": "^0.21.1",
 		"bootstrap": "^4.6.0",
 		"dotenv": "^8.2.0",
+		"google-maps-react": "^2.0.6",
 		"jquery": "^3.6.0",
 		"popper.js": "^1.16.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
 		"react-leaflet": "^3.1.0",
+		"react-places-autocomplete": "^7.3.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.4",
@@ -51,5 +53,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/react-places-autocomplete": "^7.2.6"
 	}
 }
