--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"@types/bootstrap": "^5.0.12",
+		"@types/google-map-react": "^2.1.0",
 		"@types/leaflet": "^1.7.0",
 		"@types/node": "^14.14.37",
 		"@types/react": "^17.0.3",
@@ -17,7 +18,9 @@
 		"axios": "^0.21.1",
 		"bootstrap": "^4.6.0",
 		"dotenv": "^8.2.0",
+		"google-map-react": "^2.1.9",
 		"jquery": "^3.6.0",
+		"leaflet": "^1.7.1",
 		"popper.js": "^1.16.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
