--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_ENDPOINT=http://localhost:5000/api
+REACT_APP_API_ENDPOINT_0=http://localhost:5000/api
+REACT_APP_API_DOMAIN=https://wheelshare-altbackend-2efyw.ondigitalocean.app/
