--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_DOMAIN_=http://localhost:5000/
-REACT_APP_API_DOMAIN=https://wheelshare-altbackend-2efyw.ondigitalocean.app/
+REACT_APP_API_DOMAIN__=https://wheelshare-altbackend-2efyw.ondigitalocean.app/
+REACT_APP_API_DOMAIN=https://api.wheelshare.app/
