--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^12.1.10",
 		"@types/node": "^14.14.37",
 		"@types/react": "^17.0.3",
+		"@types/react-dom": "^17.0.9",
 		"@types/react-router-dom": "^5.1.7",
 		"dotenv": "^8.2.0",
 		"react": "^17.0.2",
@@ -19,7 +20,12 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.4",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"workbox-cacheable-response": "^6.1.5",
+		"workbox-expiration": "^6.1.5",
+		"workbox-routing": "^6.1.5",
+		"workbox-strategies": "^6.1.5",
+		"workbox-webpack-plugin": "^6.1.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
