--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@types/react-dom": "^17.0.9",
 		"@types/react-router-dom": "^5.1.7",
 		"dotenv": "^8.2.0",
+		"google-maps-react": "^2.0.6",
 		"immutable": "^4.0.0-rc.14",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
+		"react-google-maps": "^9.4.5",
 		"react-places-autocomplete": "^7.3.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
