--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
-		"react-google-maps": "^9.4.5",
+		"react-konami": "^0.6.2",
 		"react-places-autocomplete": "^7.3.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
