--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_LOCAL=http://localhost:5000/
 REACT_APP_API_PROD=https://api.wheelshare.app/
+REACT_APP_API_LOCAL0=https://api.wheelshare.app/
